--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <body>
     <div class="Header">
         <div id="logo">
-            <img src="./logo.png" alt="Techies Code" srcset="">
+            <img src="sudoku ninja.png" alt="code" srcset="">
         </div>
-        <div id="name">Techie's Code</div>
+        <!-- <div id="name">Sudoku Ninja</div> -->
     </div>
-    <div class="Heading">Sudoku Solver</div>
+    <!-- <div class="Heading">Sudoku Solver</div> -->
     <div class="sudoku_grid">
         <div id="0" class="box1 bl bt"></div>
         <div id="1" class="box1 bt"></div>
